--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="#" ng-click="loginGithub()">Github</a></li>
+                        <li><a href="#" ng-click="loginFacebook()">Facebook</a></li>
                     </ul>
                 </li>
                 <li ng-show="user"><a href="#" ng-click="logout()">Logout {{user.name}}.</a></li>
