Upgrade to Angular 1.2.0

--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
     <!-- General 3rd Party Scripts-->
     <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js'></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.1.5/angular.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.0/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-route.js"></script>
 
     <!-- Firebase Scripts -->
     <script src='https://cdn.firebase.com/v0/firebase.js'></script>
